# Badminton

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  debug-ocr.html  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
analysis/: README.md  algorithm_docs.py  analysis.py  bench_analysis.py  engine_analysis.py  export_html.py  level_tracker_analysis.py  pyproject.toml  run_batched_simulation.ts  serve.py  simulate.ts  smart_matching_analysis.py  tournament_analysis.py  ts-loader.mjs
analysis/analysis/data/: config.json  pair_events.csv  summary.csv
analysis/data/: comparison_summary.csv  config.json  pair_events.csv  pair_events_batch2.csv  pair_events_batch3.csv  pair_events_batch4.csv  summary.csv  summary_batch1.csv
analysis/data/bench_analysis/: bench_data.json  bench_events_17p_batch1.csv  bench_events_17p_batch2.csv  bench_events_17p_batch3.csv  bench_events_17p_batch4.csv  bench_events_17p_batch5.csv  bench_events_18p_batch1.csv  bench_events_18p_batch2.csv  bench_events_18p_batch3.csv  bench_events_18p_batch4.csv  bench_events_18p_batch5.csv  bench_events_19p_batch1.csv  bench_events_19p_batch2.csv  bench_events_19p_batch3.csv  bench_events_19p_batch4.csv  bench_events_19p_batch5.csv  bench_events_20p_batch1.csv  bench_events_20p_batch2.csv  bench_events_20p_batch3.csv  bench_events_20p_batch4.csv  bench_events_20p_batch5.csv  bench_summary_17p_batch1.csv  bench_summary_17p_batch2.csv  bench_summary_17p_batch3.csv  bench_summary_17p_batch4.csv  (+28 more)
analysis/simulation/: ConflictGraphEngine.ts  MonteCarloEngine.ts  RandomBaselineEngine.ts  index.ts  types.ts  utils.ts
analysis/utils/: __init__.py  analysis.py  bench.py  config_metrics.py  plotting.py  stats.py
(+458 files in other folders)
