[project]
name = "badminton-analysis"
version = "0.1.0"
description = "Analysis notebook dependencies for badminton simulations."
requires-python = ">=3.11"
dependencies = [
  "marimo",
  "polars",
  "matplotlib",
  "uvicorn",
]

[tool.uv.scripts]
export-html = """
mkdir -p html && \
marimo export html algorithm_docs.py -o html/algorithm_docs.html && \
marimo export html analysis.py -o html/analysis.html && \
marimo export html bench_analysis.py -o html/bench_analysis.html && \
marimo export html engine_analysis.py -o html/engine_analysis.html
"""

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

