[project]
name = "badminton-analysis"
version = "0.1.0"
description = "Analysis notebook dependencies for badminton simulations."
requires-python = ">=3.11"
dependencies = [
  "marimo",
  "polars",
  "matplotlib",
  "uvicorn",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Export command (run manually):
# marimo export html --no-include-code algorithm_docs.py -o html/algorithm_docs.html
# marimo export html --no-include-code engine_analysis.py -o html/engine_analysis.html